--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3.3'
 services:
-#  app:
-#    container_name: node
-#    restart: always
-#    build: .
-#    ports:
-#      - '3000:3000'
-#    links:
-#      - db
+  app:
+    container_name: node
+    restart: always
+    build: .
+    ports:
+      - '3000:3000'
+    links:
+      - db
 
   db:
     image: mysql:5.6
     restart: always
     environment:
-      MYSQL_DATABASE: 'my-db'
+      MYSQL_DATABASE: 'seedb'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'sse'
       # You can use whatever password you like
@@ -28,7 +28,7 @@ services:
       - '3306'
       # Where our data will be persisted
     volumes:
-      - my-db:/data/db
+      - ssedb:/data/db
 # Names our volume
 volumes:
-  my-db:
+  ssedb:
