--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: mysql:5.6
     restart: always
     environment:
-      MYSQL_DATABASE: 'seedb'
+      MYSQL_DATABASE: 'my-db'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'sse'
       # You can use whatever password you like
@@ -28,7 +28,7 @@ services:
       - '3306'
       # Where our data will be persisted
     volumes:
-      - ssedb:/data/db
+      - my-db:/data/db
 # Names our volume
 volumes:
-  ssedb:
+  my-db:
