add readme and compose files

--- a/OS-Injection/Dockerfile
+++ b/OS-Injection/Dockerfile
@@ -3,8 +3,11 @@ FROM node:10
 # Create app directory
 WORKDIR /usr/src/app
 
-# Install app dependencies
-COPY package*.json ./
+# Copy package.json to the WORKDIR
+COPY package.json .
+
+# Install the dependencies
+RUN npm install
 
 RUN npm ci --only=production
 RUN export YOUR_CTF_FLAG=/{21c03acad5a7e68094b680725be8137a480a783564308d00612f9e301de9e3a2}
@@ -14,4 +17,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD [ "node", "server.js" ]
+CMD [ "npm", "start" ]
