--- a/SQL-Injection/docker-compose.yml
+++ b/SQL-Injection/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
-  app:
-    container_name: node
+  sql-injection:
+    container_name: sse-sql-injection
     restart: always
     build: .
     ports:
