--- a/OS-Injection/Dockerfile
+++ b/OS-Injection/Dockerfile
@@ -3,11 +3,8 @@ FROM node:10
 # Create app directory
 WORKDIR /usr/src/app
 
-# Copy package.json to the WORKDIR
-COPY package.json .
-
-# Install the dependencies
-RUN npm install
+# Install app dependencies
+COPY package*.json ./
 
 RUN npm ci --only=production
 RUN export YOUR_CTF_FLAG=/{21c03acad5a7e68094b680725be8137a480a783564308d00612f9e301de9e3a2}
@@ -17,4 +14,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+CMD [ "node", "server.js" ]
